# MIPS_QT6

./: .gitignore  CLAUDE.md  CMakeLists.txt  Counter.txt  MIPS.pro  MIPS.pro.user.0bca80a  MIPS.pro.user.341323f.4.8-pre1  MIPS.pro.user.863739a  MIPS.pro.user.ZUoaat  MIPS.pro.user.ad606a3  MIPS.pro.user.b6df3d6  MIPS.pro.user.d511a3a  MIPS.pro.user.d511a3a.22  MIPS.pro.user.f77928f  MIPS.pro.user.f77928f.22  MIPS.pro.user.tqJHgz  MIPScommands.txt  Makefile  PRIVACY.md  README.md  Revision.md  Russell.cfg  TWAVEhelp.txt  Utilities.cpp  Utilities.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  acquiredata.cpp  adc.cpp  adc.h  arb.cpp  arb.h  arbwaveformedit.cpp  arbwaveformedit.h  ccontrol.cpp  ccontrol.h  cdirselectiondlg.cpp  cdirselectiondlg.h  cmdlineapp.cpp  (+139 more)
.github/workflows/: MACsigning.yml  WindowsSigning.yml  build-macos.yml  build-windows.yml  release.yml
.github/workflows/.github/workflows/: build-windows.yml
MIPS.app/Contents/: Info.plist
MIPS.app/Contents/Frameworks/QtCore5Compat.framework/Versions/A/: QtCore5Compat
MIPS.app/Contents/Frameworks/QtCore5Compat.framework/Versions/A/Resources/: Info.plist
MIPS.app/Contents/Frameworks/QtDBus.framework/Versions/A/: QtDBus
MIPS.app/Contents/Frameworks/QtNetwork.framework/Versions/A/: QtNetwork
MIPS.app/Contents/Frameworks/QtPrintSupport.framework/Versions/A/: QtPrintSupport
MIPS.app/Contents/Frameworks/QtSerialBus.framework/Versions/A/: QtSerialBus
MIPS.app/Contents/Frameworks/QtSerialPort.framework/Versions/A/: QtSerialPort
MIPS.app/Contents/Frameworks/QtSvg.framework/Versions/A/: QtSvg
MIPS.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
MIPS.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqico.dylib  libqjpeg.dylib  libqsvg.dylib
MIPS.app/Contents/PlugIns/networkinformation/: libqscnetworkreachability.dylib
MIPS.app/Contents/PlugIns/styles/: libqmacstyle.dylib
MIPS.app/Contents/PlugIns/tls/: libqcertonlybackend.dylib  libqopensslbackend.dylib  libqsecuretransportbackend.dylib
temp/: MIPScommands.txt  README.md  cdirselectiondlg.cpp  cmdlineapp.cpp  comms.cpp  comms.h  compressor.cpp  controlpanel.cpp  controlpanel.h  dcbias.cpp  device.h  dio.cpp  help.h  mips.cpp  modbus.h  plot.cpp  plot.h  program.cpp  properties.h  qrc_files.cpp  rfamp.h  rfdriver.cpp  scriptingconsole.cpp  scriptingconsole.h  timinggenerator.cpp  timinggenerator.h  timinggenerator.ui  ui_controlpanel.h  ui_help.h  ui_mips__.h  ui_psviewer.h
tools/: bossac
